# Hermes-Function-Calling

./: .env  .gitignore  async_for_test.py  async_for_test_complicate.py  async_for_test_complicate_modulaize.py  config.py  dict_chat_message_test.py  domain_models.py  functioncall.py  functioncall_log_240327_stock_with_tool_dec.md  functioncall_log_240327_stock_without_tool_dec.md  functioncall_log_240327_with_tool_dec.md  functioncall_log_240327_without_tool_dec.md  is_cuda_avaliable.py  jsonmode.py  main.py  main_standalone.py  multiple_messages_test.md  my_see_log.md  note.md  official_sse_log.md  prompter.py  pyproject.toml  requirements.txt  results_20240326_01.md  results_calculator_240326.json  seed_42_test.md  seed_42_test_new_seed_location.md  simple_langchain_decorator_test.py  test.py  test_async.py  test_async_message.py  test_desc.py  ts_note.md  utils.py  utils_logger.py  utils_settings.py  why_random_1.json  why_random_2.json  why_random_3.json  (+1 more)
application/: avaliable_functions.py  functioncall_use_case.py  jsonmode_use_case.py  stanalone_use_case.py
common/: dependencies.py  preload.py
presentation/: chat.py  dto.py  openai.py  utils.py
