[tool.poetry]
name = "hermes-function-calling"
version = "0.1.0"
description = ""
authors = ["tuanshu (v100) <tuanshu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.1.2"
transformers = ">=4.38.1"
bitsandbytes = ">=0.41.1"
accelerate = "0.27.2"
langchain = "0.1.9"
pydantic = "2.6.2"
jsonschema = "4.21.1"
yfinance = "0.2.36"
pandas = "2.2.0"
ninja = "1.11.1.1"
protobuf = "^5.26.0"
sentencepiece = "^0.2.0"
art = "^6.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
openai = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
